oxiplate-derive/tests/broken/if/missing-if-expression.stderr
error: Expected an expression after `if`
 --> tests/broken/if/missing-if-expression.rs:4:26
  |
4 | #[oxiplate_inline("{% if %}")]
  |                          ^^
